[package]
name = "mkLineExe"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image"] }
rfd = "0.14"
resvg = "0.36"
tiny-skia = "0.11"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
