[package]
name = "mkLineExe"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image"] }
rfd = "0.14"
resvg = "0.36"
tiny-skia = "0.11"
junction = "1.2"
remove_dir_all = "0.8"
trash = "5"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
